# Simplex

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  simplex.cpp  simplex.h  user_data.cpp  user_data.h
tests/: test.txt
