cmake_minimum_required(VERSION 2.8)
project(Simplex)
set(SOURCE_EXE main.cpp)		
set(SOURCE_LIB1 user_data.cpp)
set(SOURCE_LIB2 simplex.cpp)		
add_library(user_data STATIC ${SOURCE_LIB1})
add_library(simplex STATIC ${SOURCE_LIB2})
add_executable(main ${SOURCE_EXE})	
target_link_libraries(main user_data simplex)
